# TupleOS

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FAT16.md  Makefile  README.md  build.sh  linker.ld  nom.nom
boot/: boot.asm  context_switch.asm  gdt_flush.asm  interrupts.asm  stage1.asm  stage2.asm
iso/boot/grub/: grub.cfg
kernel/: gdt.c  gdt.h  idt.c  idt.h  kernel.c  keyboard.c  keyboard.h  kheap.c  paging.c  paging.h  pmm.c  process.c  process.h  scheduler.c  scheduler.h  shell.c  shell.h  syscall.c  syscall.h  terminal.h  timer.c  tss.c  tss.h  vmm.c  vmm.h
